Strelkov, otus-spring-2023-01, homework-8 refactoring-2